final changes to fix some small, non word wrapping issues and a README update stating what I had done in this assignment

--- a/style.css
+++ b/style.css
@@ -10,10 +10,9 @@ body {
 
 .list-group-item {
     font-family: 'Mitr', sans-serif;
+    overflow-wrap: break-word;
 }
 
-.list-group {
-}
 
 .container {
     margin-top: 1rem;
@@ -50,6 +49,7 @@ body {
     color: midnightblue;
     font-family: 'Mitr', sans-serif;
     text-shadow: -1px -1px 0 white, 1px -1px 0 white, -1px 1px 0 white, 1px 1px 0 white;
+    overflow-wrap: break-word;
 }
 
 .list-group-item {
